k8s/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: app-production
  labels:
    name: app-production
    environment: production
